plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

mainClassName = 'be.isservers.hmb.Bot'

group 'be.isservers'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_11

repositories {
    jcenter()
    mavenCentral()
    maven { url "https://jitpack.io" }
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    implementation group: 'net.dv8tion', name: 'JDA', version: '4.2.1_256'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
    implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.75'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
    implementation group: 'io.vertx', name: 'vertx-core', version: '4.0.3'
    implementation group: 'io.vertx', name: 'vertx-web', version: '4.0.3'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
}

compileJava.options.encoding = 'UTF-8'

